--- a/auth-service/AuthService/AuthService.csproj
+++ b/auth-service/AuthService/AuthService.csproj
@@ -7,6 +7,8 @@
     <RootNamespace>AuthService</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.3.5" />
