Adding endpoint and swagger specs

--- a/auth-service/AuthService/appsettings.json
+++ b/auth-service/AuthService/appsettings.json
@@ -10,5 +10,16 @@
     "Port": "6379",
     "Password": "taxi"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Grpc": {
+        "Url": "http://localhost:5002",
+        "Protocols": "Http2"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
