--- a/gateway/Gateway/appsettings.json
+++ b/gateway/Gateway/appsettings.json
@@ -6,8 +6,18 @@
       }
     },
     "Clients": {
-      "AuthServiceHost": "localhost"
+      "AuthServiceHost": "http://localhost:5002"
+    },
+    "Kestrel": {
+      "Endpoints": {
+        "Http": {
+          "Url": "http://localhost:4000"
+        },
+        "Https": {
+          "Url": "https://localhost:4001"
+        }
+      }
     },
     "AllowedHosts": "*"
-  }
+}
   
