--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,4 +1,8 @@
 version: "3"
+
+networks:
+  internal-network:
+
 services:
   redis:
     image: redis:alpine
@@ -6,27 +10,38 @@ services:
       --requirepass ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
+
   postgres:
-      image: postgres:12.3-alpine
-      restart: always
-      environment:
-          POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-          POSTGRES_USER: ${POSTGRES_USER}
-          POSTGRES_DB: ${POSTGRES_DB}
-      volumes:
-          - ./postgres/:/docker-entrypoint-initdb.d/:ro
+    image: postgres:12.3-alpine
+    restart: always
+    ports:
+      - "5432:5432"
+    networks:
+      - internal-network
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - ./postgres/:/docker-entrypoint-initdb.d/:ro
+
   web:
-      image: sem:latest
-      ports:
-      - "5300:1234"
-      command: go run .  
+    image: sem:latest
+    ports:
+    - "5300:1234"
+    networks:
+      - internal-network
+    command: go run .  
+
   pgadmin:
-      image: dpage/pgadmin4:7.1
-      environment:
-          PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-          PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-          PGADMIN_LISTEN_PORT: 80
-      ports:
-          - 15432:80
-      depends_on:
-          - postgres
+    image: dpage/pgadmin4:7.1
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_LISTEN_PORT: 80
+    networks:
+      - internal-network
+    ports:
+      - 15432:80
+    depends_on:
+      - postgres
