--- a/gateway/Gateway/Gateway.csproj
+++ b/gateway/Gateway/Gateway.csproj
@@ -14,10 +14,15 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.57.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../../auth-service/AuthService.Proto/AuthService.Proto.csproj" />
+    <Protobuf Include="../../db-interface/packages/gRPC/*.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
