--- a/gateway/Gateway/appsettings.json
+++ b/gateway/Gateway/appsettings.json
@@ -1,23 +1,20 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Clients": {
+    "AuthServiceHost": "http://localhost:5002",
+    "DbProviderHost": "http://localhost:1234"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:4000"
       }
-    },
-    "Clients": {
-      "AuthServiceHost": "http://localhost:5002"
-    },
-    "Kestrel": {
-      "Endpoints": {
-        "Http": {
-          "Url": "http://localhost:4000"
-        },
-        "Https": {
-          "Url": "https://localhost:4001"
-        }
-      }
-    },
-    "AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
-  
